lista duplamente encadeada, lista circular e circular duplamente cadeada

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,8 @@
     "algorithm": "cpp",
     "array": "cpp",
     "string_view": "cpp",
-    "initializer_list": "cpp"
+    "initializer_list": "cpp",
+    "new": "cpp",
+    "iostream": "cpp"
   }
 }
