finalizadas listas sequenciais e encadeadas

--- a/listaSequencial/Makefile
+++ b/listaSequencial/Makefile
@@ -1,7 +1,7 @@
 all:
 	g++ -c lista_sequencial/list_seq.cpp
-	g++ -c lista_sequencial/list_seq_main.cpp
-	g++ list_seq.o list_seq_main.o -o main
+	g++ -c lista_sequencial/main.cpp
+	g++ list_seq.o main.o -o main
 
 clean:
-	rm list_seq.o list_seq_main.o main
+	rm list_seq.o main.o main
